--- a/index.html
+++ b/index.html
@@ -231,50 +231,70 @@
                         break;
                 }
 
+                // Clone first and last slides for seamless looping
+                const firstSlideClone = `<div class="gallery-slide">${galleryImages[0].src} alt=""><div class="gallery-subtext">${galleryImages[0].subtext}</div></div>`;
+                const lastSlideClone = `<div class="gallery-slide">${galleryImages[galleryImages.length - 1].src} alt=""><div class="gallery-subtext">${galleryImages[galleryImages.length - 1].subtext}</div></div>`;
+
                 galleryContainer.innerHTML = `
-            <div class="gallery-content">
-                <span class="gallery-close">&times;</span>
-                <div class="gallery-scroll">
-                    ${galleryImages.map(image => `
-                        <div class="gallery-slide">
-                            <img src="${image.src}" alt="">
-                            <div class="gallery-subtext">${image.subtext}</div>
-                        </div>
-                    `).join('')}
-                </div>
-                <button class="gallery-prev">&lt;</button>
-                <button class="gallery-next">&gt;</button>
+        <div class="gallery-content">
+            <span class="gallery-close">&times;</span>
+            <div class="gallery-scroll">
+                ${lastSlideClone}  <!-- Clone of the last slide -->
+                ${galleryImages.map(image => `
+                    <div class="gallery-slide">
+                        <img src="${image.src}" alt="">
+                        <div class="gallery-subtext">${image.subtext}</div>
+                    </div>
+                `).join('')}
+                ${firstSlideClone} <!-- Clone of the first slide -->
             </div>
-        `;
+            <button class="gallery-prev">&lt;</button>
+            <button class="gallery-next">&gt;</button>
+        </div>
+    `;
 
                 const galleryScroll = galleryContainer.querySelector('.gallery-scroll');
                 const slides = galleryScroll.querySelectorAll('.gallery-slide');
-                let currentIndex = 0;
+                const totalSlides = slides.length;
+                let currentIndex = 1; // Start at the actual first slide (skip the clone)
+
+                // Set initial position to show the real first slide
+                galleryScroll.style.transform = `translateX(-${galleryScroll.clientWidth}px)`;
 
                 function updateGalleryPosition() {
                     console.log(`Updating gallery position to index: ${currentIndex}`);
                     const offset = -currentIndex * galleryScroll.clientWidth;
+                    galleryScroll.style.transition = 'transform 0.5s ease';
                     galleryScroll.style.transform = `translateX(${offset}px)`;
+
+                    // If we move to the cloned slides, reset without animation
+                    galleryScroll.addEventListener('transitionend', () => {
+                        if (currentIndex === 0) {
+                            galleryScroll.style.transition = 'none';
+                            currentIndex = totalSlides - 2; // Move to the last real slide
+                            galleryScroll.style.transform = `translateX(-${currentIndex * galleryScroll.clientWidth}px)`;
+                        } else if (currentIndex === totalSlides - 1) {
+                            galleryScroll.style.transition = 'none';
+                            currentIndex = 1; // Move to the first real slide
+                            galleryScroll.style.transform = `translateX(-${galleryScroll.clientWidth}px)`;
+                        }
+                    });
                 }
 
-                // Handle navigation buttons
+                // Handle navigation buttons with looping
                 galleryContainer.querySelector('.gallery-next').addEventListener('click', () => {
                     console.log("Next button clicked");
-                    if (currentIndex < slides.length - 1) {
-                        currentIndex++;
-                        updateGalleryPosition();
-                    }
+                    currentIndex++;
+                    updateGalleryPosition();
                 });
 
                 galleryContainer.querySelector('.gallery-prev').addEventListener('click', () => {
                     console.log("Previous button clicked");
-                    if (currentIndex > 0) {
-                        currentIndex--;
-                        updateGalleryPosition();
-                    }
+                    currentIndex--;
+                    updateGalleryPosition();
                 });
 
-                // Handle swipe detection for mobile
+                // Handle swipe detection for mobile with looping
                 let startX, isSwiping = false;
 
                 galleryScroll.addEventListener('touchstart', (e) => {
@@ -288,12 +308,12 @@
                     const touchX = e.touches[0].clientX;
                     const deltaX = touchX - startX;
 
-                    if (deltaX > 50 && currentIndex > 0) {
+                    if (deltaX > 50) {
                         console.log("Swipe detected: moving to previous slide");
                         currentIndex--;
                         updateGalleryPosition();
                         isSwiping = false;
-                    } else if (deltaX < -50 && currentIndex < slides.length - 1) {
+                    } else if (deltaX < -50) {
                         console.log("Swipe detected: moving to next slide");
                         currentIndex++;
                         updateGalleryPosition();
@@ -301,27 +321,26 @@
                     }
                 }, { passive: true });
 
-                // Close the gallery when the "X" button is clicked
+                // Ensure the "X" button works after touch events
                 const closeButton = galleryContainer.querySelector('.gallery-close');
+
                 closeButton.addEventListener('click', (e) => {
                     e.stopPropagation();
                     console.log("Close button clicked");
-
-                    // Add fade-out effect before removing the gallery
                     galleryContainer.classList.add('fade-out');
                     setTimeout(() => {
                         galleryContainer.remove();
                         console.log("Gallery closed via fade-out");
-                    }, 500); // Match the duration of the fade-out animation
+                    }, 500);
                 });
 
-
-                // Reset swipe state after touch ends
                 galleryScroll.addEventListener('touchend', () => {
                     isSwiping = false;
                     console.log("Touch end detected, swipe state reset");
                 });
             }
+
+
         });
 
         // Add CSS for the popup gallery
