--- a/index.html
+++ b/index.html
@@ -231,22 +231,16 @@
                         break;
                 }
 
-                // Clone first and last slides for seamless looping
-                const firstSlideClone = `<div class="gallery-slide">${galleryImages[0].src} alt=""><div class="gallery-subtext">${galleryImages[0].subtext}</div></div>`;
-                const lastSlideClone = `<div class="gallery-slide">${galleryImages[galleryImages.length - 1].src} alt=""><div class="gallery-subtext">${galleryImages[galleryImages.length - 1].subtext}</div></div>`;
-
                 galleryContainer.innerHTML = `
         <div class="gallery-content">
             <span class="gallery-close">&times;</span>
             <div class="gallery-scroll">
-                ${lastSlideClone}  <!-- Clone of the last slide -->
                 ${galleryImages.map(image => `
                     <div class="gallery-slide">
                         <img src="${image.src}" alt="">
                         <div class="gallery-subtext">${image.subtext}</div>
                     </div>
                 `).join('')}
-                ${firstSlideClone} <!-- Clone of the first slide -->
             </div>
             <button class="gallery-prev">&lt;</button>
             <button class="gallery-next">&gt;</button>
@@ -255,42 +249,24 @@
 
                 const galleryScroll = galleryContainer.querySelector('.gallery-scroll');
                 const slides = galleryScroll.querySelectorAll('.gallery-slide');
-                const totalSlides = slides.length;
-                let currentIndex = 1; // Start at the actual first slide (skip the clone)
-
-                // Set initial position to show the real first slide
-                galleryScroll.style.transform = `translateX(-${galleryScroll.clientWidth}px)`;
+                let currentIndex = 0;
 
                 function updateGalleryPosition() {
                     console.log(`Updating gallery position to index: ${currentIndex}`);
                     const offset = -currentIndex * galleryScroll.clientWidth;
-                    galleryScroll.style.transition = 'transform 0.5s ease';
                     galleryScroll.style.transform = `translateX(${offset}px)`;
-
-                    // If we move to the cloned slides, reset without animation
-                    galleryScroll.addEventListener('transitionend', () => {
-                        if (currentIndex === 0) {
-                            galleryScroll.style.transition = 'none';
-                            currentIndex = totalSlides - 2; // Move to the last real slide
-                            galleryScroll.style.transform = `translateX(-${currentIndex * galleryScroll.clientWidth}px)`;
-                        } else if (currentIndex === totalSlides - 1) {
-                            galleryScroll.style.transition = 'none';
-                            currentIndex = 1; // Move to the first real slide
-                            galleryScroll.style.transform = `translateX(-${galleryScroll.clientWidth}px)`;
-                        }
-                    });
                 }
 
                 // Handle navigation buttons with looping
                 galleryContainer.querySelector('.gallery-next').addEventListener('click', () => {
                     console.log("Next button clicked");
-                    currentIndex++;
+                    currentIndex = (currentIndex + 1) % slides.length; // Loop around
                     updateGalleryPosition();
                 });
 
                 galleryContainer.querySelector('.gallery-prev').addEventListener('click', () => {
                     console.log("Previous button clicked");
-                    currentIndex--;
+                    currentIndex = (currentIndex - 1 + slides.length) % slides.length; // Loop around
                     updateGalleryPosition();
                 });
 
@@ -310,12 +286,12 @@
 
                     if (deltaX > 50) {
                         console.log("Swipe detected: moving to previous slide");
-                        currentIndex--;
+                        currentIndex = (currentIndex - 1 + slides.length) % slides.length; // Loop around
                         updateGalleryPosition();
                         isSwiping = false;
                     } else if (deltaX < -50) {
                         console.log("Swipe detected: moving to next slide");
-                        currentIndex++;
+                        currentIndex = (currentIndex + 1) % slides.length; // Loop around
                         updateGalleryPosition();
                         isSwiping = false;
                     }
@@ -339,7 +315,6 @@
                     console.log("Touch end detected, swipe state reset");
                 });
             }
-
 
         });
 
