--- a/index.html
+++ b/index.html
@@ -501,10 +501,13 @@
     <!-- Cookie Consent Bar -->
     <div id="cookie-consent-bar" class="cookie-consent-bar">
       <p>
-        We use cookies to enhance your experience. By continuing to visit this
-        site you agree to our use of cookies.
+        Ce site utilise des cookies pour vous offrir une meilleure expérience
+        utilisateur. En utilisant notre site, vous acceptez l'utilisation de
+        cookies.
+        <button id="accept-cookies" class="cookie-consent-button">
+          Accepter
+        </button>
       </p>
-      <button id="accept-cookies" class="cookie-consent-button">Accept</button>
     </div>
   </body>
 </html>
