--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <p>438 777-1501</p>
           <p><a href="mailto:info@avantagejmr.com">info@avantagejmr.com</a></p>
         </div>
-        <form action="submit_form.php" method="post">
+        <form action="https://formspree.io/f/mvgplepr" method="post">
           <div class="form-group">
             <label for="name">Nom</label>
             <input type="text" id="name" name="name" required />
